# recipes

./: .editorconfig  .gitignore  .prettierrc.json  .travis.yml  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  basic-pow.html  basic-token.html  blocks.json  book.toml  cache.html  charity.html  config copy.json  config.json  consensus-intro.html  constants.html  crowdfund.html  currency-imbalances.html  currency.html  custom-rpc.html  custom-spec.json  double.html  events.html  fees.html  fixed-point.html  hybrid-consensus.html  index.html  instantiable.html  introduction.html  justfile  kitchen-node.html  klaro.min.js  map-set.html  more-resources.html  nodes-intro.html  (+25 more)
consensus/manual-select-chain/: Cargo.toml
consensus/manual-select-chain/src/: lib.rs
consensus/sha3pow/: Cargo.toml
consensus/sha3pow/src/: lib.rs
consensus/simple-poa/: Cargo.toml
consensus/simple-poa/src/: lib.rs
kitchen/: Cargo.toml  README.md
kitchen/balance/: README.md
kitchen/balance/lockable/: Cargo.toml
kitchen/balance/reservable/: README.md
kitchen/balance/src/: lib.rs
kitchen/collateral/: README.md
kitchen/collateral/reservable/: Cargo.toml
kitchen/event/adder/: Cargo.toml
kitchen/event/balance/: Cargo.toml
kitchen/event/basic/: Cargo.toml
kitchen/event/permissioned/: Cargo.toml
kitchen/frameless-node/: Cargo.toml
kitchen/frameless-node/src/: chain_spec.rs
kitchen/hook/: Cargo.toml
kitchen/hook/src/: lib.rs
kitchen/lockable/: Cargo.toml
kitchen/loop/src/: lib.rs
kitchen/modules/: README.md
kitchen/modules/adder/: Cargo.toml
kitchen/modules/adding-machine/: Cargo.toml
kitchen/modules/append-to-vec/: Cargo.toml
kitchen/modules/basic-token/: Cargo.toml
kitchen/modules/check-membership/: Cargo.toml
kitchen/modules/child-trie/: Cargo.toml  types.json
kitchen/modules/currency-imbalances/: Cargo.toml
kitchen/modules/custom-origin/: Cargo.toml
kitchen/modules/default-instance/: Cargo.toml
kitchen/modules/double-map/: Cargo.toml  types.json
kitchen/modules/execution-schedule/: Cargo.toml  README.md  types.json
kitchen/modules/gen-random/: Cargo.toml
kitchen/modules/generic-event/: Cargo.toml
kitchen/modules/hello-substrate/: Cargo.toml
kitchen/modules/helloworld/: Cargo.toml
kitchen/modules/last-caller/: Cargo.toml
kitchen/modules/linked-map/: Cargo.toml
kitchen/modules/lockable-currency/: Cargo.toml
kitchen/modules/module-constant-config/: Cargo.toml
kitchen/modules/random/: Cargo.toml
kitchen/modules/reservable-currency/: Cargo.toml
kitchen/modules/schedule-on-finalize/: Cargo.toml
kitchen/modules/simple-event/: Cargo.toml
kitchen/modules/simple-map/: Cargo.toml
kitchen/modules/single-value/: Cargo.toml
kitchen/modules/smpl-crowdfund/: Cargo.toml  types.json
kitchen/modules/smpl-treasury/: Cargo.toml  README.md  tests_cache.md  types.json
kitchen/modules/social/: Cargo.toml
kitchen/modules/social-network/: Cargo.toml
kitchen/modules/srml-test/: Cargo.toml
kitchen/modules/storage-cache/: Cargo.toml
kitchen/modules/struct-storage/: Cargo.toml
kitchen/modules/token/: Cargo.toml
kitchen/modules/treasury/: README.md
kitchen/modules/value/: Cargo.toml
kitchen/modules/vec-set/: Cargo.toml
kitchen/modules/weight/: Cargo.toml
kitchen/modules/weights/: Cargo.toml  types.json
kitchen/node/: Cargo.toml  README.md
kitchen/node/src/: chain_spec.rs  cli.rs  service.rs
kitchen/nodes/kitchen-node/: Cargo.toml
kitchen/nodes/rpc-node/: Cargo.toml
kitchen/pallets/: README.md
kitchen/pallets/basic-token/: Cargo.toml
kitchen/pallets/charity/: Cargo.toml  README.md
kitchen/pallets/check-membership/: Cargo.toml
kitchen/pallets/constant-config/: Cargo.toml
kitchen/pallets/currency-imbalances/: Cargo.toml
kitchen/pallets/default-instance/: Cargo.toml
kitchen/pallets/double-map/: Cargo.toml
kitchen/pallets/execution-schedule/: Cargo.toml  README.md
kitchen/pallets/gen-random/: Cargo.toml
kitchen/pallets/generic-event/: Cargo.toml
kitchen/pallets/hello-substrate/: Cargo.toml
kitchen/pallets/last-caller/: Cargo.toml
kitchen/pallets/lockable-currency/: Cargo.toml
kitchen/pallets/simple-event/: Cargo.toml
kitchen/pallets/simple-map/: Cargo.toml
kitchen/pallets/simple-treasury/: Cargo.toml
kitchen/pallets/smpl-crowdfund/: Cargo.toml
kitchen/pallets/smpl-treasury/: Cargo.toml  README.md
kitchen/pallets/storage-cache/: Cargo.toml
kitchen/pallets/vec-set/: Cargo.toml
kitchen/pallets/weights/: Cargo.toml
kitchen/permissioned/: Cargo.toml
kitchen/permissioned/src/: lib.rs
kitchen/random/: README.md
kitchen/random/src/: lib.rs
kitchen/runtimes/: README.md
kitchen/runtimes/api-genesis/: Cargo.toml
kitchen/runtimes/api-runtime/: Cargo.toml
kitchen/runtimes/example-configs/: Cargo.toml
kitchen/runtimes/frameless-runtime/: Cargo.toml  build.rs
kitchen/runtimes/super-genesis/: Cargo.toml
kitchen/substrate-node-template/: Cargo.toml
kitchen/treasury/: Cargo.toml  README.md
nodes/babe-grandpa-node/: Cargo.toml  Dockerfile  README.md
nodes/basic-pow/: Cargo.toml  Dockerfile  README.md
nodes/frameless-node/: Cargo.toml
nodes/hybrid-consensus/: Cargo.toml  Dockerfile  README.md
nodes/kitchen-node/: Cargo.toml  Dockerfile  README.md  build.rs
nodes/manual-seal/: Cargo.toml  Dockerfile  README.md
nodes/rpc-node/: Cargo.toml  Dockerfile  README.md
pallets/adding-machine/: Cargo.toml
pallets/basic-token/: Cargo.toml  README.md
pallets/charity/: Cargo.toml  README.md
pallets/check-membership/: Cargo.toml
pallets/child-trie/: Cargo.toml
pallets/compounding-interest/: Cargo.toml  README.md  types.json
pallets/constant-config/: Cargo.toml  README.md
pallets/currency-imbalances/: Cargo.toml
pallets/default-instance/: Cargo.toml
pallets/double-map/: Cargo.toml  types.json
pallets/execution-schedule/: Cargo.toml  README.md
pallets/fixed-point/: Cargo.toml  README.md  types.json
pallets/generic-event/: Cargo.toml
pallets/hello-substrate/: Cargo.toml
pallets/last-caller/: Cargo.toml
(+847 files in other folders)
