[workspace]
members = [
	"pallets/adding-machine",
	"pallets/basic-token",
	"pallets/charity",
	"pallets/check-membership",
	"pallets/child-trie",
	"pallets/constant-config",
	"pallets/currency-imbalances",
	"pallets/default-instance",
	"pallets/double-map",
	"pallets/execution-schedule",
	"pallets/generic-event",
	"pallets/hello-substrate",
	"pallets/last-caller",
	"pallets/lockable-currency",
	"pallets/offchain-demo",
	"pallets/randomness",
	"pallets/reservable-currency",
	"pallets/ringbuffer-queue",
	"pallets/simple-event",
	"pallets/simple-map",
	"pallets/single-value",
	# "pallets/simple-crowdfund",
	# "pallets/pallet-panic",
	"pallets/storage-cache",
	"pallets/struct-storage",
	"pallets/sum-storage",
	"pallets/vec-set",
	"pallets/weights",
	"runtimes/pow-runtime",
	"runtimes/super-runtime",
	"runtimes/weight-fee-runtime",
	"runtimes/api-runtime",
	"nodes/kitchen-node",
	"nodes/rpc-node",
	"nodes/basic-pow",
]
