[workspace]
members = [
	"pallets/adding-machine",
	"pallets/basic-token",
	"pallets/charity",
	"pallets/check-membership",
	"pallets/compounding-interest",
	"pallets/constant-config",
	"pallets/currency-imbalances",
	"pallets/default-instance",
	"pallets/double-map",
	"pallets/execution-schedule",
	"pallets/fixed-point",
	"pallets/generic-event",
	"pallets/hello-substrate",
	"pallets/last-caller",
	"pallets/lockable-currency",
	"pallets/offchain-demo",
	"pallets/randomness",
	"pallets/reservable-currency",
	"pallets/ringbuffer-queue",
	"pallets/simple-crowdfund",
	"pallets/simple-event",
	"pallets/simple-map",
	"pallets/single-value",
	"pallets/storage-cache",
	"pallets/struct-storage",
	"pallets/sum-storage",
	"pallets/vec-set",
	"pallets/weights",
	"runtimes/api-runtime",
	"runtimes/babe-grandpa-runtime",
	"runtimes/ocw-runtime",
	"runtimes/minimal-grandpa-runtime",
	"runtimes/super-runtime",
	"runtimes/weight-fee-runtime",
	"nodes/babe-grandpa-node",
	"nodes/basic-pow",
	"nodes/hybrid-consensus",
	"nodes/kitchen-node",
	"nodes/manual-seal",
	"nodes/rpc-node",
	"consensus/sha3pow",
]
