[workspace]
members = [
	"pallets/basic-token",
	"pallets/charity",
	"pallets/check-membership",
	"pallets/compounding-interest",
	"pallets/constant-config",
	"pallets/currency-imbalances",
	"pallets/default-instance",
	"pallets/double-map",
	"pallets/fixed-point",
	"pallets/generic-event",
	"pallets/hello-substrate",
	"pallets/last-caller",
	"pallets/lockable-currency",
	"pallets/map-set",
	"pallets/ocw-demo",
	"pallets/randomness",
	"pallets/reservable-currency",
	"pallets/ringbuffer-queue",
	"pallets/simple-crowdfund",
	"pallets/simple-event",
	"pallets/simple-map",
	"pallets/storage-cache",
	"pallets/struct-storage",
	"pallets/sum-storage",
	"pallets/vec-set",
	"pallets/weights",
	"runtimes/api-runtime",
	"runtimes/ocw-runtime",
	"runtimes/minimal-grandpa-runtime",
	"runtimes/super-runtime",
	"runtimes/weight-fee-runtime",
	"nodes/basic-pow",
	"nodes/hybrid-consensus",
	"nodes/kitchen-node",
	"nodes/rpc-node",
	"consensus/sha3pow",
	"traits/account-set",
]
