[workspace]
members = [
  "modules/adding-machine",
  "modules/basic-token",
  "modules/check-membership",
  # "modules/child-tree",
  "modules/currency-imbalances",
  "modules/double-map",
  # "modules/gen-random",
  "modules/generic-event",
  "modules/hello-substrate",
  "modules/linked-map",
  "modules/lockable-currency",
  "modules/module-constant-config",
  "modules/reservable-currency",
  "modules/schedule-on-finalize",
  "modules/simple-event",
  "modules/simple-map",
  "modules/single-value",
  "modules/smpl-treasury",
  "modules/social-network",
  # "modules/srml-panic",
  "modules/storage-cache",
  "modules/struct-storage",
  "modules/vec-set",
  "modules/last-caller",
  "modules/default-instance",
  # "modules/weights",
  "runtimes/super-runtime",
  # "runtimes/super-genesis",
  # "runtimes/weight-fee-runtime",
  # "runtimes/weight-fee-genesis",
  # "node",
]
