[workspace]
members = [
  "pallets/adding-machine",
  "pallets/basic-token",
  "pallets/check-membership",
  "pallets/child-trie",
  "pallets/currency-imbalances",
  "pallets/double-map",
  "pallets/execution-schedule",
  # "pallets/gen-random",
  "pallets/generic-event",
  "pallets/hello-substrate",
  "pallets/linked-map",
  "pallets/lockable-currency",
  "pallets/constant-config",
  "pallets/reservable-currency",
  "pallets/simple-event",
  "pallets/simple-map",
  "pallets/single-value",
  "pallets/smpl-treasury",
  #"pallets/smpl-crowdfund",
  # "pallets/pallet-panic",
  "pallets/storage-cache",
  "pallets/struct-storage",
  "pallets/vec-set",
  "pallets/last-caller",
  "pallets/default-instance",
  "pallets/weights",
  "runtimes/super-runtime",
  "runtimes/super-genesis",
  "runtimes/weight-fee-runtime",
  "runtimes/weight-fee-genesis",
  "node",
]
