[package]
name = 'sha3pow'
version = "2.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'Sha3-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"consensus",
	"recipe",
]
compatibility_version = "2.0.0"

[dependencies]
parity-scale-codec = '1.3.4'
rand = { version = "0.7.2", features = ["small_rng"] }
sha3 = "0.8"

# Substrate packages

sc-consensus-pow = '0.8.0'
sp-api = '2.0.0'
sp-consensus-pow = '0.8.0'
sp-core = '2.0.0'
sp-runtime = '2.0.0'
