[package]
name = "lockable-example"
version = "0.1.0"
authors = ["4meta5"]
edition = "2018"

[features]
default = ['std']
std = [
    'parity-scale-codec/std',
    'support/std',
    'system/std',
    'balances/std',
    'runtime-primitives/std',
]

[dependencies.parity-scale-codec]
default-features = false
features = ['derive']
version = '1.0.5'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
branch = 'master'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
branch = 'master'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
branch = 'master'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
branch = 'master'

[dev-dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
branch = 'master'

[dev-dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
branch = 'master'
