[package]
name = "kitchen-node"
version = "2.0.0"
authors = ["Anonymous"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "kitchen-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.1.29"
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.1.4"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.0.0" }
trie-root = "0.15.2"
sp-io = { git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
substrate-cli = { package = "sc-cli", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
primitives = { package = "sp-core", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
substrate-executor = { package = "sc-executor", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
substrate-service = { package = "sc-service", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
inherents = { package = "sp-inherents", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
transaction-pool = { package = "sc-transaction-pool", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
network = { package = "sc-network", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
babe = { package = "sc-consensus-babe", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
babe-primitives = { package = "sp-consensus-babe", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
grandpa = { package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
grandpa-primitives = { package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
substrate-client = { package = "sc-client", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }
basic-authorship = { package = "sc-basic-authority", git = 'https://github.com/paritytech/substrate.git', branch = 'td-warnings' }

# Edit these lines to point to a different runtime.
# Your runtime must have the necessary runtime modules to support consensus (Babe, Grandpa, etc)
runtime = { package = "super-runtime", path = "../runtimes/super-runtime" }
runtime-genesis = { package = "super-genesis", path = "../runtimes/super-genesis" }
# runtime = { package = "weight-fee-runtime", path = "../runtimes/weight-fee-runtime"}
# runtime-genesis = { package = "weight-fee-genesis", path = "../runtimes/weight-fee-genesis"}

[build-dependencies]
vergen = "3.0.4"
