[package]
name = "babe-grandpa-node"
version = "2.0.0-dev"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node where consensus authorities are determined by the runtime and passed to the consensus engine via a runtime API.'
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"Node",
	"Babe",
	"Grandpa",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-dev"

[[bin]]
name = "babe-grandpa-node"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
futures = "0.3.1"
structopt = "0.3.8"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
exit-future = "0.2.0"
parking_lot = "0.9.0"
trie-root = "0.15.2"
sp-io = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-cli = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-client-api = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-consensus = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-core = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-runtime = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-executor = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-service = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-inherents = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-transaction-pool = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-transaction-pool = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-network = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-consensus-babe = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-consensus-babe = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-finality-grandpa = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-finality-grandpa = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sc-basic-authorship = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }
sp-consensus = { version = '0.8.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }

# This node only works with runtimes that can provide babe and grandpa authorities.
# No other runtimes that come with the recipes provide these APIs, but the substrate demonstration
# runtime does.
runtime = { package = "babe-grandpa-runtime", path = "../../runtimes/babe-grandpa-runtime" }

# In theory the main Substrate node's runtime is compatible, but there are several practical limitations
# 1. It isn't published on crates.io so a git dependency is needed which leads to
#    `perhaps two different versions of crate `sp_runtime` are being used?`
# 2. That runtime doesn't have an `opaque` module
# 3. That runtime doesn't have a genesis module
# runtime = { package = "node-runtime", git = "https://github.com/paritytech/substrate/", rev = '7e9a2ae78d27cc56e053fbec3b34a1a258b89561' }


[build-dependencies]
vergen = "3.0.4"
substrate-build-script-utils = { version = '2.0.0-dev', git = 'https://github.com/paritytech/substrate', rev = '00768a1f21a579c478fe5d4f51e1fa71f7db9fd4' }

[features]
ocw = []
