[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
name = 'basic-pow'
repository = 'https://github.com/substrate-developer-hub/recipes'
version = "2.0.0-rc6"
description = 'A Substrate node that demonstrates minimal proof of work consensus'
license = "GPL-3.0-or-later"

[package.metadata.substrate]
categories = [
	"Node",
	"PoW",
	"tutorial",
	"recipe",
]
compatibility_version = "2.0.0-rc6"

[[bin]]
name = 'basic-pow'
path = 'src/main.rs'

[dependencies]
futures = '0.3.1'
log = '0.4.8'
structopt = '0.3.8'
parity-scale-codec = '1.3.0'
sha3 = "0.8"
rand = { version = "0.7", features = ["small_rng"] }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-consensus-pow = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-consensus-pow = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
sha3pow = { path = '../../consensus/sha3pow' }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }

# This node is compatible with any of the runtimes below
# ---
# Common runtime configured with most Recipes pallets.
runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with custom runtime-api (custom API only used in rpc-node)
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }
# ---

[build-dependencies]
vergen = '3.0.4'
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'joshy-split-manual-seal-finality' }
